Fixed letter spacing in CSS

--- a/masthead.css
+++ b/masthead.css
@@ -72,7 +72,7 @@
 @media only screen and (min-width: 414px) {
   h1 {
     font-size: 40px;
-    letter-spacing: -2px;
+    letter-spacing: -1px;
   }
   h2 {
     font-size: 24px;
@@ -88,6 +88,7 @@
 @media only screen and (max-width: 1439px) and (min-width: 768px) {
   h1 {
     font-size: 60px;
+    letter-spacing: -2px;
   }
   h2 {
     font-size: 28px;
@@ -112,6 +113,7 @@
   }
   h1 {
     font-size: 80px;
+    letter-spacing: -3px;
   }
   h2 {
     font-size: 36px;
